--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p class="pb-3">Beyond my professional pursuits, I am deeply passionate about music. I enjoy producing music and singing, blending my technical expertise with my creative side to create unique and expressive pieces. This passion for music enhances my approach to web development, allowing me to bring a creative and artistic perspective to my projects. Whether it's developing responsive websites with Bootstrap, creating interactive web applications using JavaScript and jQuery, or producing captivating musical compositions, I strive to infuse creativity and innovation into everything I do. I am always eager to learn new technologies and methodologies to stay at the forefront of my field, ensuring that I can bring the latest and greatest to every project I undertake. Thank you for taking the time to learn more about me, and I look forward to the possibility of working together</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="/portfolio/my image.jpg" alt="balu" class="img-fluid w-75 m-auto"/>
+                    <img src="./my image.jpg" alt="balu" class="img-fluid w-75 m-auto"/>
                 </div>
             </div>
         </div>
