--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="/portfolio/html.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px"alt="html">
+                            <img src="./portfolio/html.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px"alt="html">
                             <div class="card-body">
                               <h5 class="card-title">HTML</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="/portfolio/bs.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
+                            <img src="./portfolio/bs.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">BOOTSTRAP</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem ;">
-                            <img src="/portfolio/css.png" class="card-img-top w-25 h-50 pt-4 m-auto" id="picture" height="300px" width="300px" alt="html">
+                            <img src="./portfolio/css.png" class="card-img-top w-25 h-50 pt-4 m-auto" id="picture" height="300px" width="300px" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">CSS</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="/portfolio/jquery.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
+                            <img src="./portfolio/jquery.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">JQUERY</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="/portfolio/js.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px"alt="html">
+                            <img src="./portfolio/js.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px"alt="html">
                             <div class="card-body">
                               <h5 class="card-title">JAVA SCRIPT</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="/portfolio/py.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
+                            <img src="./portfolio/py.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">PYTHON</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
