--- a/index.html
+++ b/index.html
@@ -72,55 +72,55 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="./portfolio/html.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px"alt="html">
+                            <img src="./html.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px"alt="html">
                             <div class="card-body">
                               <h5 class="card-title">HTML</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Expert in HTML, creating well-structured and accessible web pages as the foundation for web development.</p>
                             </div>
                           </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="./portfolio/bs.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
+                            <img src="./bs.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">BOOTSTRAP</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Adept at using Bootstrap to quickly develop responsive, mobile-first websites with consistent, modern designs.</p>
                             </div>
                           </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem ;">
-                            <img src="./portfolio/css.png" class="card-img-top w-25 h-50 pt-4 m-auto" id="picture" height="300px" width="300px" alt="html">
+                            <img src="./css.png" class="card-img-top w-25 h-50 pt-4 m-auto" id="picture" height="300px" width="300px" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">CSS</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Skilled in CSS, transforming HTML into visually appealing, responsive designs using modern techniques.</p>
                             </div>
                           </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="./portfolio/jquery.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
+                            <img src="./jquery.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">JQUERY</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Experienced with jQuery, simplifying JavaScript tasks like event handling and animations for efficient coding.</p>
                             </div>
                           </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="./portfolio/js.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px"alt="html">
+                            <img src="./js.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px"alt="html">
                             <div class="card-body">
                               <h5 class="card-title">JAVA SCRIPT</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Proficient in JavaScript, adding interactivity and functionality to web pages for dynamic user experiences.</p>
                             </div>
                           </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card text-center mb-4" style="width: 20rem;">
-                            <img src="./portfolio/py.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
+                            <img src="./py.png" class="card-img-top w-25 h-50 pt-4 m-auto " height="300px" width="300px" alt="html">
                             <div class="card-body">
                               <h5 class="card-title">PYTHON</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">Versatile in Python, handling web development, data analysis, and automation with a focus on readability and simplicity.</p>
                             </div>
                           </div>
                     </div>
